--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,21 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	runtimeOnly 'com.mysql:mysql-connector-j'
+}
+
+bootJar{
+	archivesBaseName = 'Fundy-BE'
+	archiveFileName = 'Fundy-BE.jar'
+	archiveVersion = "0.0.1"
 }
 
 tasks.named('test') {
