--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,11 @@ dependencies {
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
   
-	// jwt
+	// jwt, oauth2
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.1.2'
 
 	// Mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
