--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:5.4.0'
+	testImplementation 'org.springframework.security:spring-security-test:6.1.3'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 }
